<resources>
    <string name="app_name">Asteroids</string>
    <string name="attribution_tag_app_data_storage_label">Storing app data like high scores</string>
    <string name="game_over">Game over. Total hits: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">Score:</string>
    <string name="start_text">Tap the spaceship to start</string>
    <string name="paus">Game is paused</string>
    <string name="scoreBoard">Game Score</string>
    <string name="howToPlay">Move the spaceship with your finger and try to avoid the asteroids.\n
        Shoot aliens to get extra points by tapping with another finger on the screen.\n
        Avoid getting hit by asteroids and aliens or you lose lives!.
    </string>
    <string name="start_game">Start Game</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_6">6.</string>
    <string name="_8">8.</string>
    <string name="_9">9.</string>
    <string name="_7">7.</string>
    <string name="_10">10.</string>
    <string name="howToRestart">Click home-button to restart the game\nand play again!</string>
    <string name="welcome">Welcome to Asteroids!</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="info_start">Click on start game to start the game or \n
        click leaderboard to see highScores</string>

</resources>