<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/endFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#100F0F"
    tools:context=".EndFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:touchscreenBlocksFocus="true"
            app:navigationIcon="@drawable/home"
            app:title="Asteroids"
            app:titleCentered="true"
            app:titleMargin="4dp"
            app:titleTextColor="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/scoreBoard"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <RelativeLayout
        android:id="@+id/highScoreArea"
        android:layout_width="200dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startText">

        <TextView
            android:id="@+id/score1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/score1"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/score2"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/score3"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/score4"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/score5"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/score6"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score8"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/score7"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score9"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/score8"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/score10"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="40dp"
            android:text="@string/_10"
            android:textColor="@color/white"
            android:textSize="24sp"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@drawable/stars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2" />
    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:background="@drawable/stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2" />
    <ImageView
        android:id="@+id/star4"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2" />
    <ImageView
        android:id="@+id/star5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="288dp"
        android:background="@drawable/stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2" />
    <ImageView
        android:id="@+id/star6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/stars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageView
        android:id="@+id/star7"
        android:layout_width="57dp"
        android:layout_height="52dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/stars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/star8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:background="@drawable/stars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/star9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:background="@drawable/stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout2" />

    <ImageView
        android:id="@+id/star10"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/stars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>